Token登録用API追加
